# topic-modeling-in-EHR

./: COMP565_A5_LDA.ipynb  README.md  pyproject.toml
data/: MIMIC3_DIAGNOSES_ICD_subset.csv
