[tool.poetry]
name = "topic-modeling-in-ehr"
version = "0.1.0"
description = ""
authors = ["Keval Pipalia <keval.pipalia@dialogue.co>"]
readme = "README.md"
packages = [{include = "topic_modeling_in_ehr"}]

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^4.0.9"
pandas = "^2.1.3"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
